eliminate use-after-delete cases

BUG: 270531
BUG: 270607